--- a/DemoRazorPageApp/wwwroot/css/site.css
+++ b/DemoRazorPageApp/wwwroot/css/site.css
@@ -210,4 +210,50 @@ a {
     }
 
 
+
+.dataTables_paginate {
+   /* border: 1px solid #e1e5e8;*/
+    background-color: #ffffff;
+    border-radius: 6px;
+    /*width: 76px;*/
+    height: 30px;
+}
+
+    .dataTables_paginate .icon-left {
+        background: url("../../../img/left-page.svg") no-repeat center #ffffff;
+        background-size: 10px;
+        color: #ffffff;
+        width: 20px;
+        height: 20.6px;
+        display: inline-block;
+        padding: 0;
+        margin-right: 0px;
+        padding: 14px 16px;
+    }
+
+    .dataTables_paginate .icon-right {
+        background: url("../../../img/right-page.svg") no-repeat center #ffffff;
+        background-size: 10px;
+        color: #ffffff;
+        width: 20px;
+        height: 20.6px;
+        display: inline-block;
+        padding: 14px 17px;
+        border-left: 1px solid #e1e5e8;
+    }
+
+    .dataTables_paginate .disabled .icon-left {
+        width: 20px;
+        height: 20.6px;
+        background: url("../../../img/left-disable-icon.svg") no-repeat center #ffffff;
+        background-size: 10px;
+    }
+
+    .dataTables_paginate .disabled .icon-right {
+        width: 20px;
+        height: 20.6px;
+        background: url("../../../img/right-disable-icon.svg") no-repeat center #ffffff;
+        background-size: 10px;
+    }
+
 /*# sourceMappingURL=app.css.map*/
