UI Change - Reverted test changes of page titles.

--- a/DemoRazorPageApp/Pages/Index.cshtml
+++ b/DemoRazorPageApp/Pages/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="inner-wrapper">
         <div class="sidebar">
             <a href="" class="logo">
-                <h5 class="logotext"></h5>
+                <h5 class="logotext"> LubeSoft</h5>
             </a>
             <partial name="_SidebarPartial" />
         </div>
@@ -17,7 +17,7 @@
             <div class="top-nav"></div>
             <div class="body-wrapper">
                 <div class="body-wrapper-inr">
-                    <h3 class="heading"></h3>
+                    <h3 class="heading"> Search Vehicle</h3>
                     <div class="input-main">
                         <span class="img-otr">
                             <img class="icon" src="~/img/search-icon.png" alt="icon">
